--- a/todo-api/package.json
+++ b/todo-api/package.json
@@ -12,10 +12,22 @@
   "dependencies": {
     "apollo-server-express": "^2.6.7",
     "body-parser": "^1.19.0",
+    "chalk": "^2.4.2",
     "cors": "^2.8.5",
     "debug": "^4.1.1",
     "express": "^4.17.1",
     "graphql": "^14.4.2",
+    "graphql-depth-limit": "^1.1.0",
+    "graphql-fields": "^2.0.3",
+    "graphql-iso-date": "^3.6.1",
+    "graphql-type-json": "^0.3.0",
+    "graphql-validation-complexity": "^0.2.5",
+    "helmet": "^3.18.0",
+    "jsonwebtoken": "^8.5.1",
+    "lodash": "^4.17.11",
+    "merge-graphql-schemas": "^1.5.8",
+    "passport": "^0.4.0",
+    "passport-jwt": "^4.0.0",
     "todo-db": "file:../todo-db"
   },
   "devDependencies": {
